# active-object

./: .gitignore  CMakeLists.txt  bbuild.sh  readme.md  ref.cpp
app/: CMakeLists.txt  main.cpp
demo/: CMakeLists.txt  main.cpp
demo/doc/: demo-doc.md  hsm-demo-sequence.plantuml
doc/: doc.md  hsm-sequence.plantuml
lib/: CMakeLists.txt
lib/DemoObjects/: DemoObjects.cpp  DemoObjects.hpp
lib/Infrastructure/: CMakeLists.txt
lib/Infrastructure/IEvent/: CMakeLists.txt  IEvent.hpp
lib/Infrastructure/IState/: CMakeLists.txt  IState.hpp
lib/Infrastructure/Logger/: CMakeLists.txt  Logger.hpp
lib/Infrastructure/StateManager/: CMakeLists.txt  StateManager.hpp
lib/Infrastructure/ThreadSafeQueue/: CMakeLists.txt  ThreadSafeQueue.hpp
samples/toaster/: main.cpp
samples/toaster/doc/: toaster-states.plantuml
test/: CMakeLists.txt
